<resources>
    <string name="app_name">GoogleMapsProject</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_server_key">AIzaSyA5w5A7o_V_gyeNwsTg_pjjN1e7eF_la4s</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_direction">DirectionActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>


    <!-- Direction Act-->
    <string name="pick_up">Pick Up: </string>
    <string name="drop_off">Drop Off: </string>


    <!-- Feedback View-->
    <string name="feedback_subtitle">Feedback on walk / app / Walkhome:</string>
    <string name="feedback_date">Date (required)</string>
    <string name="feedback_previous_walkinfo">Previous Walk Info</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Login Act-->
    <string name="phone_number">Phone Number (This Device): </string>
    <string name="login_info">Walkhome is a fully anonymous service. This account is for the purpose of sending you
    notifications or calling you about your walk request. </string>
    <string name="title_activity_main_login">Walkhome</string>
    <string name="title_activity_status">StatusActivity</string>


    <string name="request_sent">Request sent</string>
    <string name="request_recieved">Request received</string>
    <string name="walker_on_way">Walks on their way</string>
    <string name="walk_in_progress">Walk in progress</string>
    <string name="walk_completed">Walk completed</string>
    <string name="title_activity_security">SecurityActivity</string>
</resources>
